// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ResetPasswordForm/> should accept same difficult passwords 1`] = `
<div>
  <div
    class="makeStyles-root-34"
  >
    <div
      class="MuiBox-root MuiBox-root-35"
    >
      <h3
        class="MuiTypography-root MuiTypography-h3"
      >
        Reset password
      </h3>
    </div>
    <form
      action="#"
      data-testid="common-auth-resetPassword-form-form"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
        >
          <div
            class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
            data-testid="common-auth-resetPassword-form-newPassword"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root makeStyles-label-37 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
              data-shrink="true"
            >
              Enter new password
            </label>
            <div
              class="MuiInputBase-root MuiFilledInput-root makeStyles-filledRoot-36 makeStyles-filledRoot-38 MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiFilledInput-input"
                type="password"
                value="123-Abc$"
              />
            </div>
          </div>
          <div
            class="MuiCollapse-container MuiCollapse-hidden"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <p
                  class="MuiFormHelperText-root MuiFormHelperText-contained"
                >
                  <span>
                    ​
                  </span>
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
        >
          <div
            class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
            data-testid="common-auth-resetPassword-form-passwordRepeat"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root makeStyles-label-37 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
              data-shrink="true"
            >
              Confirm password
            </label>
            <div
              class="MuiInputBase-root MuiFilledInput-root makeStyles-filledRoot-36 makeStyles-filledRoot-39 MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiFilledInput-input"
                type="password"
                value="123-Abc$"
              />
            </div>
          </div>
          <div
            class="MuiCollapse-container"
            style="min-height: 0px; height: 0px; transition-duration: 300ms;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <p
                  class="MuiFormHelperText-root MuiFormHelperText-contained"
                >
                  <span>
                    ​
                  </span>
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
        >
          <button
            class="MuiButtonBase-root MuiButton-root makeStyles-root-40 makeStyles-root-43 MuiButton-contained MuiButton-containedPrimary MuiButton-disableElevation MuiButton-fullWidth"
            tabindex="0"
            type="submit"
          >
            <span
              class="MuiButton-label"
            >
              <span
                class="makeStyles-inner-41 makeStyles-inner-44"
                data-testid="common-elementary-button-children"
                style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
              >
                Reset password
              </span>
              <div
                class="makeStyles-loader-42"
                data-testid="common-elementary-button-loader"
                style="opacity: 0; visibility: hidden;"
              >
                <div
                  class="css-0"
                >
                  <div
                    class="css-1ab95gp"
                  />
                  <div
                    class="css-tm4xur"
                  />
                  <div
                    class="css-1epl0i6"
                  />
                  <div
                    class="css-1fj2adh"
                  />
                  <div
                    class="css-1vivfwt"
                  />
                </div>
              </div>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`<ResetPasswordForm/> should not accept different passwords 1`] = `
<div>
  <div
    class="makeStyles-root-23"
  >
    <div
      class="MuiBox-root MuiBox-root-24"
    >
      <h3
        class="MuiTypography-root MuiTypography-h3"
      >
        Reset password
      </h3>
    </div>
    <form
      action="#"
      data-testid="common-auth-resetPassword-form-form"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
        >
          <div
            class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
            data-testid="common-auth-resetPassword-form-newPassword"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root makeStyles-label-26 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
              data-shrink="true"
            >
              Enter new password
            </label>
            <div
              class="MuiInputBase-root MuiFilledInput-root makeStyles-filledRoot-25 makeStyles-filledRoot-27 MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiFilledInput-input"
                type="password"
                value="123-Abc$"
              />
            </div>
          </div>
          <div
            class="MuiCollapse-container MuiCollapse-hidden"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <p
                  class="MuiFormHelperText-root MuiFormHelperText-contained"
                >
                  <span>
                    ​
                  </span>
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
        >
          <div
            class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
            data-testid="common-auth-resetPassword-form-passwordRepeat"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root makeStyles-label-26 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled Mui-error Mui-error MuiFormLabel-filled"
              data-shrink="true"
            >
              Confirm password
            </label>
            <div
              class="MuiInputBase-root MuiFilledInput-root makeStyles-filledRoot-25 makeStyles-filledRoot-28 Mui-error Mui-error MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-invalid="true"
                class="MuiInputBase-input MuiFilledInput-input"
                type="password"
                value="123-AbcS"
              />
            </div>
          </div>
          <div
            class="MuiCollapse-container"
            style="min-height: 0px; height: 0px; transition-duration: 300ms;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <p
                  class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error"
                >
                  Passwords are not the same
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
        >
          <button
            class="MuiButtonBase-root MuiButton-root makeStyles-root-29 makeStyles-root-32 MuiButton-contained MuiButton-containedPrimary MuiButton-disableElevation MuiButton-fullWidth"
            tabindex="0"
            type="submit"
          >
            <span
              class="MuiButton-label"
            >
              <span
                class="makeStyles-inner-30 makeStyles-inner-33"
                data-testid="common-elementary-button-children"
                style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
              >
                Reset password
              </span>
              <div
                class="makeStyles-loader-31"
                data-testid="common-elementary-button-loader"
                style="opacity: 0; visibility: hidden;"
              >
                <div
                  class="css-0"
                >
                  <div
                    class="css-1ab95gp"
                  />
                  <div
                    class="css-tm4xur"
                  />
                  <div
                    class="css-1epl0i6"
                  />
                  <div
                    class="css-1fj2adh"
                  />
                  <div
                    class="css-1vivfwt"
                  />
                </div>
              </div>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`<ResetPasswordForm/> should not accept simple password 1`] = `
<div>
  <div
    class="makeStyles-root-12"
  >
    <div
      class="MuiBox-root MuiBox-root-13"
    >
      <h3
        class="MuiTypography-root MuiTypography-h3"
      >
        Reset password
      </h3>
    </div>
    <form
      action="#"
      data-testid="common-auth-resetPassword-form-form"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
        >
          <div
            class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
            data-testid="common-auth-resetPassword-form-newPassword"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root makeStyles-label-15 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled Mui-error Mui-error MuiFormLabel-filled"
              data-shrink="true"
            >
              Enter new password
            </label>
            <div
              class="MuiInputBase-root MuiFilledInput-root makeStyles-filledRoot-14 makeStyles-filledRoot-16 Mui-error Mui-error MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-invalid="true"
                class="MuiInputBase-input MuiFilledInput-input"
                type="password"
                value="a"
              />
            </div>
          </div>
          <div
            class="MuiCollapse-container"
            style="min-height: 0px; height: 0px; transition-duration: 300ms;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <p
                  class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error"
                >
                  Password must be longer than 8 characters
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
        >
          <div
            class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
            data-testid="common-auth-resetPassword-form-passwordRepeat"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root makeStyles-label-15 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
              data-shrink="true"
            >
              Confirm password
            </label>
            <div
              class="MuiInputBase-root MuiFilledInput-root makeStyles-filledRoot-14 makeStyles-filledRoot-17 MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiFilledInput-input"
                type="password"
                value="a"
              />
            </div>
          </div>
          <div
            class="MuiCollapse-container"
            style="min-height: 0px; height: 0px; transition-duration: 300ms;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <p
                  class="MuiFormHelperText-root MuiFormHelperText-contained"
                >
                  <span>
                    ​
                  </span>
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
        >
          <button
            class="MuiButtonBase-root MuiButton-root makeStyles-root-18 makeStyles-root-21 MuiButton-contained MuiButton-containedPrimary MuiButton-disableElevation MuiButton-fullWidth"
            tabindex="0"
            type="submit"
          >
            <span
              class="MuiButton-label"
            >
              <span
                class="makeStyles-inner-19 makeStyles-inner-22"
                data-testid="common-elementary-button-children"
                style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
              >
                Reset password
              </span>
              <div
                class="makeStyles-loader-20"
                data-testid="common-elementary-button-loader"
                style="opacity: 0; visibility: hidden;"
              >
                <div
                  class="css-0"
                >
                  <div
                    class="css-1ab95gp"
                  />
                  <div
                    class="css-tm4xur"
                  />
                  <div
                    class="css-1epl0i6"
                  />
                  <div
                    class="css-1fj2adh"
                  />
                  <div
                    class="css-1vivfwt"
                  />
                </div>
              </div>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`<ResetPasswordForm/> should render 1`] = `
<div>
  <div
    class="makeStyles-root-1"
  >
    <div
      class="MuiBox-root MuiBox-root-2"
    >
      <h3
        class="MuiTypography-root MuiTypography-h3"
      >
        Reset password
      </h3>
    </div>
    <form
      action="#"
      data-testid="common-auth-resetPassword-form-form"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
        >
          <div
            class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
            data-testid="common-auth-resetPassword-form-newPassword"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root makeStyles-label-4 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-filled"
              data-shrink="false"
            >
              Enter new password
            </label>
            <div
              class="MuiInputBase-root MuiFilledInput-root makeStyles-filledRoot-3 makeStyles-filledRoot-5 MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiFilledInput-input"
                type="password"
                value=""
              />
            </div>
          </div>
          <div
            class="MuiCollapse-container MuiCollapse-hidden"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <p
                  class="MuiFormHelperText-root MuiFormHelperText-contained"
                >
                  <span>
                    ​
                  </span>
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
        >
          <div
            class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
            data-testid="common-auth-resetPassword-form-passwordRepeat"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root makeStyles-label-4 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-filled"
              data-shrink="false"
            >
              Confirm password
            </label>
            <div
              class="MuiInputBase-root MuiFilledInput-root makeStyles-filledRoot-3 makeStyles-filledRoot-6 MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiFilledInput-input"
                type="password"
                value=""
              />
            </div>
          </div>
          <div
            class="MuiCollapse-container MuiCollapse-hidden"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <p
                  class="MuiFormHelperText-root MuiFormHelperText-contained"
                >
                  <span>
                    ​
                  </span>
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
        >
          <button
            class="MuiButtonBase-root MuiButton-root makeStyles-root-7 makeStyles-root-10 MuiButton-contained MuiButton-containedPrimary MuiButton-disableElevation MuiButton-fullWidth"
            tabindex="0"
            type="submit"
          >
            <span
              class="MuiButton-label"
            >
              <span
                class="makeStyles-inner-8 makeStyles-inner-11"
                data-testid="common-elementary-button-children"
                style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
              >
                Reset password
              </span>
              <div
                class="makeStyles-loader-9"
                data-testid="common-elementary-button-loader"
                style="opacity: 0; visibility: hidden;"
              >
                <div
                  class="css-0"
                >
                  <div
                    class="css-1ab95gp"
                  />
                  <div
                    class="css-tm4xur"
                  />
                  <div
                    class="css-1epl0i6"
                  />
                  <div
                    class="css-1fj2adh"
                  />
                  <div
                    class="css-1vivfwt"
                  />
                </div>
              </div>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;
